@@ -15,9 +15,8 @@ import org.jlab.clara.msg.errors.ClaraMsgException;
 import org.jlab.clara.msg.net.ProxyAddress;
 
 import java.io.IOException;
-import java.nio.charset.Charset;
 import java.nio.file.Files;
-import java.nio.file.Paths;
+import java.nio.file.Path;
 import java.util.NoSuchElementException;
 import java.util.StringTokenizer;
 import java.util.concurrent.TimeoutException;
@@ -33,8 +32,8 @@ public final class CommandDebugger extends ClaraBase {
     }
 
     private void processFile(String file) {
-        var path = Paths.get(file);
-        try (var commands = Files.lines(path, Charset.defaultCharset())) {
+        var path = Path.of(file);
+        try (var commands = Files.lines(path)) {
             commands.forEach(this::processCommand);
         } catch (IOException e) {
             e.printStackTrace();
